--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -39,22 +39,22 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
-custom_proxy_group=📢 谷歌自用`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点亚节点`[]🚀 手动切换
+custom_proxy_group=📢 谷歌自用`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
@@ -65,6 +65,9 @@ custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`url-test`(英|英国|彰化|United Kingdom|GBR|GB)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇲🇾 马来西亚节点`url-test`(MY|马来西亚|MYS|Malaysia|马|吉隆坡)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(韩国|首尔|釜山|韩国|KR|Korea)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇻🇳 越南节点`url-test`(越南|胡志明市|河内|VN|Vietnam)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇮🇳 印度节点`url-test`(印度|新德里|孟买|印度|IN|India)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
