--- a/ziyong1.ini
+++ b/ziyong1.ini
@@ -48,7 +48,7 @@ custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点亚节点`[]🚀 手动切换
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
 custom_proxy_group=📢 谷歌自用`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇻🇳 越南节点`[]🇮🇳 印度节点`[]🇬🇧 英国节点`[]🇺🇲 美国节点`[]🇲🇾 马来西亚节点`[]🚀 手动切换
@@ -77,3 +77,4 @@ overwrite_original_rules=true
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
+
